main: done TODO: check enemy and background

--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -12,14 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/silksong_background"
+        app:srcCompat="@drawable/game_over_background"
         />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/gameOver_LBL_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Game Over!"
+        android:text="@string/game_over"
         android:textSize="50sp"
         android:textColor="@color/white"
         android:layout_margin="@dimen/default_margin"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/gameOver_LBL_text"
         android:layout_margin="@dimen/default_margin"
-        android:text="Back"
+        android:text="@string/back"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
