--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/moss_grotto"
+    android:background="@drawable/game_background"
     tools:context=".GameScreenActivity"
     android:keepScreenOn="true"
     >
